tests/ui/dep-graph/dep-graph-type-alias.stderr
error: no path from `TypeAlias` to `type_of`
  --> $DIR/dep-graph-type-alias.rs:18:30
   |
LL | #[rustc_then_this_would_need(type_of)]
   |                              ^^^^^^^

error: OK
  --> $DIR/dep-graph-type-alias.rs:20:34
   |
LL |     #[rustc_then_this_would_need(type_of)]
   |                                  ^^^^^^^

error: no path from `TypeAlias` to `type_of`
  --> $DIR/dep-graph-type-alias.rs:25:30
   |
LL | #[rustc_then_this_would_need(type_of)]
   |                              ^^^^^^^

error: OK
  --> $DIR/dep-graph-type-alias.rs:28:38
   |
LL |         #[rustc_then_this_would_need(type_of)]
   |                                      ^^^^^^^

error: no path from `TypeAlias` to `type_of`
  --> $DIR/dep-graph-type-alias.rs:34:30
   |
LL | #[rustc_then_this_would_need(type_of)]
   |                              ^^^^^^^

error: no path from `TypeAlias` to `type_of`
  --> $DIR/dep-graph-type-alias.rs:42:30
   |
LL | #[rustc_then_this_would_need(type_of)]
   |                              ^^^^^^^

error: OK
  --> $DIR/dep-graph-type-alias.rs:49:30
   |
LL | #[rustc_then_this_would_need(type_of)]
   |                              ^^^^^^^

error: OK
  --> $DIR/dep-graph-type-alias.rs:52:30
   |
LL | #[rustc_then_this_would_need(fn_sig)]
   |                              ^^^^^^

error: OK
  --> $DIR/dep-graph-type-alias.rs:53:30
   |
LL | #[rustc_then_this_would_need(typeck)]
   |                              ^^^^^^

error: OK
  --> $DIR/dep-graph-type-alias.rs:36:34
   |
LL |     #[rustc_then_this_would_need(fn_sig)]
   |                                  ^^^^^^

error: OK
  --> $DIR/dep-graph-type-alias.rs:44:34
   |
LL |     #[rustc_then_this_would_need(fn_sig)]
   |                                  ^^^^^^

error: OK
  --> $DIR/dep-graph-type-alias.rs:45:34
   |
LL |     #[rustc_then_this_would_need(typeck)]
   |                                  ^^^^^^

error: aborting due to 12 previous errors

